--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,10 @@ edition = "2024"
 actix-web = '4'
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-ed25519-dalek = "1.0"
+ed25519-dalek = "1.0.1"
 rand = "0.7"
 base58 = "0.2"
 base64 = "0.13"
 solana-sdk = "1.18"
 spl-token = "4.0"
+spl-associated-token-account = "2.3"
