--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,14 +4,13 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-actix-web = '4'
+actix-web = "4.4"
+base58 = "0.2"
+base64 = "0.21"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-ed25519-dalek = "1.0.1"
-rand = "0.7"
-base58 = "0.2"
-base64 = "0.13"
-solana-sdk = "1.18"
+solana-sdk = "1.16"
 spl-token = "4.0"
-spl-associated-token-account = "2.3"
-bincode = "1.3"
+spl-associated-token-account = "2.2"
+env_logger = "0.10"
+chrono = { version = "0.4", features = ["serde"] }
