--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,5 @@ spl-token = "4.0"
 spl-associated-token-account = "2.2"
 env_logger = "0.10"
 chrono = { version = "0.4", features = ["serde"] }
+
+log = "0.4"
